--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
       <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-left">
         <a class="flex text-[#333333]  font-medium  mb-4 md:mb-0">
           
-          <span class=" lg:text-[24px] lg:leading-[25px] uppercase font-bold font-['Inconsolata'] ml-3 text-xl text-[#333333]">404 not found</span>
+          <span class=" lg:text-[24px] lg:leading-[25px] uppercase font-bold font-['Inconsolata'] ml-3 text-lg text-[#333333]">404 not found</span>
         </a>
 
       </div>
     </header>
     <section class="text-gray-600 body-font">
       <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
-        <div class="  lg:max-w-lg lg:w-full md:w-1/2 w-[286.83px] lg:mt-[4%]  mt-[-100px]  mb-10 md:mb-0 ">
+        <div class="  lg:max-w-lg lg:w-full md:w-1/2 w-[250px] lg:mt-[4%]  mt-[-100px]  mb-10 md:mb-0 ">
           <img  class="  object-cover object-center rounded" alt="hero" src="Scarecrow.png">
         </div>
-        <div class="  lg:mt-[-20%%]  lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
-          <h1 class=" space  sm:text-4xl text-3xl mb-4 font-['Space_Mono'] lg:leading-[95px] lg:tracking-[-.035em] lg:text-[64px]  font-bold text-[#333333]">I have bad news 
+        <div class="  lg:mt-[-20%%]  lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-left text-left   ml-[-5px] ">
+          <h1 class=" w-[300px] text-5xl lg:w-[500px] space  sm:text-4xl  mb-4 font-['Space_Mono'] lg:leading-[95px] lg:tracking-[-.035em] lg:text-[64px]  font-bold text-[#333333]">I have bad news 
             <br class="hidden lg:inline-block">for you
           </h1>
-          <p class=" space mb-8 lg:w-[300px] lg:h-[108px] font-['Space_Mono'] lg:leading-[36px] lg:tracking-[-.035em] text-[#333333] lg:text-[24px]  leading-relaxed">The page you are looking for might be removed or is temporarily unavailable</p>
-          <div class="flex justify-center">
-            <button class=" absolute  inline-flex text-white bg-[#333333] w-[216px] h-[68px] lg:mt-[0px] ml-[200px] lg:pl-[35px] lg:pt-[19px] font-['Space_Mono'] lg:leading-[36px] lg:tracking-[-.035em] lg:text-[20px]   text-lg">Back to homepage</button>
+          <p class=" w-[270px] text-[15px] space mb-8 lg:w-[300px] lg:h-[108px] font-['Space_Mono'] lg:leading-[36px] lg:tracking-[-.035em] text-[#333333] lg:text-[24px]  leading-relaxed">The page you are looking for might be removed or is temporarily unavailable</p>
+          <div class="flex justify-center ">
+            <button class="  absolute ml-[-90px] pt-[19px] pl-[30px]  inline-flex text-white bg-[#333333] w-[216px] h-[68px] lg:mt-[0px] lg:ml-[200px] lg:pl-[35px] lg:pt-[19px] font-['Space_Mono'] lg:leading-[36px] lg:tracking-[-.035em] lg:text-[20px]   text-lg">Back to homepage</button>
           </div>
 
         </div>
