--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
   
   </head>
   <body>
-    <header class="text-gray-600 body-font">
-      <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-left">
-        <a class="flex text-[#333333]  font-medium  mb-4 md:mb-0">
+    <header>
+      <div class="container mx-auto flex flex-wrap p-5   flex-col md:flex-row items-left lg:p-5">
+        <a class="flex text-[#333333]  md:mb-0">
           
           <span class=" lg:text-[24px] lg:leading-[25px] uppercase font-bold font-['Inconsolata'] ml-3 text-lg text-[#333333]">404 not found</span>
         </a>
 
       </div>
     </header>
-    <section class="text-gray-600 body-font">
-      <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
-        <div class="  lg:max-w-lg lg:w-full md:w-1/2 w-[250px] lg:mt-[4%]  mt-[-100px]  mb-10 md:mb-0 ">
+    <section >
+      <div class="container mx-auto flex px-5 py-24  md:flex-row flex-col items-center">
+        <div class="  lg:max-w-lg lg:w-full md:w-1/2 w-[250px]  mt-[-70px] lg:mt-[-20px]  mb-10 md:mb-0 ">
           <img  class="  object-cover object-center rounded" alt="hero" src="Scarecrow.png">
         </div>
-        <div class="  lg:mt-[-20%%]  lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-left text-left   ml-[-5px] ">
+        <div class="  lg:mt-[-35px]  lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-left text-left   ml-[-5px] ">
           <h1 class=" w-[300px] text-5xl lg:w-[500px] space  sm:text-4xl  mb-4 font-['Space_Mono'] lg:leading-[95px] lg:tracking-[-.035em] lg:text-[64px]  font-bold text-[#333333]">I have bad news 
             <br class="hidden lg:inline-block">for you
           </h1>
@@ -56,7 +56,7 @@
       </div>
     </section>
     <footer>
-      <p class="font-['Montserrat'] lg:leading-[17px] text-center pt-[17%] lg:leading-[17px] text-[#BDBDBD]"> created by SUFYAN KHALID - devChallenges.io</p>
+      <p class="font-['Montserrat'] lg:leading-[17px] text-center lg:pt-[10%] pt-[10%] lg:leading-[17px] text-[#BDBDBD]"> created by SUFYAN KHALID - devChallenges.io</p>
     </footer>
     
   </body>
