update index.html file

--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
           </h1>
           <p class=" w-[270px] md:w-[225px] text-[15px] space mb-8 lg:w-[300px] lg:h-[108px] font-['Space_Mono'] lg:leading-[36px] md:leading-[25px] lg:tracking-[-.035em] md:tracking-[-.035em] text-[#333333] lg:text-[24px] md:text-[16px]  leading-relaxed">The page you are looking for might be removed or is temporarily unavailable</p>
           <div class="flex justify-center ">
-            <button class="  absolute ml-[-165px] pt-[15px] pl-[14px] lg:pt-[19px] lg:pl-[30px] md:pt-[16px] md:pl-[16px]   inline-flex text-white bg-[#333333] lg:w-[216px] lg:h-[68px] w-[115px] h-[45px] md:w-[155px] md:h-[55px] lg:mt-[0px] lg:ml-[225px] md:ml-[170px] lg:pl-[35px] lg:pt-[19px] font-['Space_Mono'] lg:leading-[36px] lg:tracking-[-.035em] lg:text-[20px] md:text-[16px]  text-[12px]">Back to homepage</button>
+            <button class="  absolute ml-[-165px] pt-[15px] pl-[14px] lg:pt-[19px] lg:pl-[30px] md:pt-[16px] md:pl-[15px]   inline-flex text-white bg-[#333333] lg:w-[216px] lg:h-[68px] w-[115px] h-[45px] md:w-[145px] md:h-[55px] lg:mt-[0px] lg:ml-[225px] md:ml-[150px] lg:pl-[35px] lg:pt-[19px] font-['Space_Mono'] lg:leading-[36px] lg:tracking-[-.035em] lg:text-[20px] md:text-[16px]  text-[12px]">Back to homepage</button>
           </div>
 
         </div>
       </div>
     </section>
     <footer>
-      <p class="font-['Montserrat'] lg:leading-[17px] text-center lg:pt-[10%] pt-[10%] md:pt-[10%] lg:leading-[17px] text-[#BDBDBD]"> created by SUFYAN KHALID - devChallenges.io</p>
+      <p class="font-['Montserrat'] lg:leading-[17px] text-center lg:pt-[10%] pt-[10%] md:pt-[95px] lg:leading-[17px] text-[#BDBDBD]"> created by SUFYAN KHALID - devChallenges.io</p>
     </footer>
     
   </body>
